fix: set visibility for action in table

--- a/src/component/Pack-card_component/Pack/Packs/pasks.module.scss
+++ b/src/component/Pack-card_component/Pack/Packs/pasks.module.scss
@@ -4,6 +4,11 @@
     justify-content: space-around;
   }
 }
+.icon{
+  width: 80px;
+  display: flex;
+  justify-content: start;
+}
 .icon:hover{
   cursor: pointer;
 }
